# cuddly-dollop

./: docker-compose.yaml  init_db.py  initsql.sql  main.py  pyproject.toml
.github/workflows/: dsomm-security-pipeline.yml
app/: __init__.py
app/models/: __init__.py  employee.py  medical_card.py  sanitary_inspection.py  student.py
app/templates/: base.html  index.html  sanitary_inspections.html
app/templates/auth/: login.html
app/templates/certificates/: generate.html  view.html
app/templates/medical_records/: index.html
app/templates/reports/: generate.html  view.html
app/views/: auth.py  certificates.py  medical_records.py  reports.py  sanitary_inspections.py
config/: settings.py
generators/: sanitaty_inspections.py
src/core/: config.py  database.py
