[project]
name = "cuddly-dollop"
version = "0.1.0"
description = ""
authors = [
    {name = "Старунов Андрей Сергеевич",email = "astarunov@ozon.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
