[project]
name = "cuddly-dollop"
version = "0.1.0"
description = ""
authors = [
    { name = "Старунов Андрей Сергеевич", email = "astarunov@ozon.ru" }
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.3"
werkzeug = "2.3.7"
jinja2 = "3.1.2"
itsdangerous = "2.1.2"
click = "8.1.7"
flask-sqlalchemy = "3.1.1"
sqlalchemy = "2.0.20"
flask-migrate = "4.0.4"
flask-login = "0.6.2"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.7"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


